...
    <string name="app_slogan">Study at every phone unlock</string>

    <string name="delete">Delete</string>
    <string name="proceed">Proceed</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="understood">Understood</string>
    <string name="loading">Loading</string>
...
    <string name="report_bug">Report a bug</string>

    <string name="menu">Menu</string>
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_lists">Lists</string>
    <string name="menu_widgets">Widgets</string>
    <string name="menu_ocr">OCR</string>
    <string name="menu_support">Support the creator!</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_annotate">Annotate a word</string>
    <string name="menu_about">About</string>
    <string name="menu_ocr_display">OCR: Scanned Text</string>

    <string name="search_hint">Search pinyin, definition, hanzi</string>
    <string name="search_clear">Clear search</string>

...
- Words collocations in Chinese (BETA!) was generated using Qwen2.5 7b - Q4_K_M LLM from Alibaba.</string>
    <string name="about_btn_email2">Email the developer</string>
    <string name="about_stats_title">Statistics</string>
    <string name="about_terms_conditions_title"><![CDATA[Privacy Policy & Licences]]></string>
    <string name="about_stats">Loading…</string>
...
    <string name="dictionary_noresult_text">%1$s not in dictionary, add annotation?</string>
    <string name="dictionary_noresultwithfilter_text">All words are filtered out.\nRemove filters like the lists, or the "♥ only".</string>
    <string name="dictionary_noresult_icon">No result!</string>
    <string name="dictionary_search_loading">Loading results</string>
    <string name="dictionary_search_filter_hasannotation_hint"> only</string>
    <string name="dictionary_filter_language_label">App language</string>
    <string name="dictionary_language_filter">Dictionary language</string>
    <string name="locale_en">English</string>
    <string name="locale_fr">Français</string>
    <string name="locale_cn_hsk3">HSK 3.0</string>

    <string name="dictionary_item_toggle">Expand/Fold more info</string>
...
    <string name="dictionary_item_collocations">Collocations</string>
    <string name="dictionary_item_altdefinition">Alternative definition</string>
    <string name="dictionary_item_lists">Manage lists for this word</string>
    <string name="dictionary_item_annotate">Annotate a word</string>
    <string name="dictionary_item_reload">New word</string>
...
    <string name="widget_placeholder_language">en</string>

    <string name="widgets_add_widget">Add a new widget</string>
    <string name="widgets_add_widget_instructions">Your launcher does not support automatically adding widgets.\nPlease add the Flashcard widget manually:\nLong press on the home screen → Widgets → Mandarin Assistant.</string>
    <string name="widgets_intro"><![CDATA[Welcome to Mandarin Assistant HSK Widget!
...
    <string name="speech_failure_toast_init">Failed to initialize the Text-To-Speech service, we need to activate, download or configure it in Settings.</string>

    <string name="annotation_edit_notes_hint">Enter your notes:</string>
    <string name="annotation_edit_is_exam_hint">Exam</string>
    <string name="annotation_exam_switch">Exam switch</string>
    <string name="annotation_edit_class_level_hint">Class level</string>
    <string name="annotation_edit_class_type_hint">Class type</string>
...
    <string name="annotation_edit_save_success">%1$s successfully saved</string>
    <string name="annotation_edit_save_failure">Couldn't save %1$s: %2$s</string>
    <string name="annotation_edit_delete_confirm_title">Confirm deletion</string>
    <string name="annotation_edit_delete_confirm_message">Are you sure you want to *delete* this annotation?</string>

    <string name="wordlist_create_new_list_button">Create personal List</string>
    <string name="wordlist_delete_button">Delete List</string>
    <string name="wordlist_delete_confirmation">Are you sure you want to delete the personal list \"%1$s\"?</string>
    <string name="wordlist_word_count">%1$d words</string>
    <string name="wordlist_name">Word list</string>
    <string name="wordlist_consult_button">Consult</string>
    <string name="wordlist_create_button">Create list</string>
    <string name="wordlist_list_name">Personal list name</string>
    <string name="wordlist_select_lists">Select personal list(s)</string>
    <string name="wordlist_list_none">You have no personal lists to add this word to, create a personal list first.</string>
    <string name="wordlist_lists_updated_toast">Personal lists updated successfully</string>
    <string name="wordlist_createddate">Created:  %1$s</string>
    <string name="wordlist_editeddate" >Modified: %1$s</string>
    <string name="wordlist_rename_button">Rename list</string>
    <string name="wordlist_list_name_dupe">This list name already exist, use another one.</string>

...
    <string name="ocr_display_loading">Processing your image</string>
    <string name="ocr_display_add">Analyze more text and add below</string>
    <string name="ocr_display_conf_smaller">Decrease Text Size</string>
    <string name="ocr_display_conf_bigger">Increase Text Size</string>
    <string name="ocr_display_pinyins">Show pinyins</string>
    <string name="ocr_display_separator">Space words</string>
...
    <string name="config_restore_file_choose">Choose file</string>

    <string name="config_language">Interface language</string>

    <string name="config_backup_cloud_title">Backup/Restore from Google</string>
...

    <string name="generic_not_applicable">N/A</string>
    <string name="generic_other">Other</string>

    <string name="enum_class_type_speaking">Speaking</string>
    <string name="enum_class_type_writing">Writing</string>
    <string name="enum_class_type_reading">Reading</string>
...
    <string name="enum_class_type_fast_reading">Fast Reading</string>

    <string name="enum_class_level_elementary_1">Elementary 1</string>
    <string name="enum_class_level_elementary_2">Elementary 2</string>
    <string name="enum_class_level_elementary_3">Elementary 3</string>
...
    <string name="enum_system_list_hsk_7">HSK7</string>
    <string name="enum_system_list_annotated_words">Annotated words</string>
    <string name="enum_system_list_at_exam">At the exam</string>

</resources>
...
